fix like num spacing on comment

--- a/app/assets/stylesheets/comment/comment.scss
+++ b/app/assets/stylesheets/comment/comment.scss
@@ -50,6 +50,10 @@
   justify-content: space-between;
 }
 
+.comment > .comment-footer > .comment-like-count {
+  margin-left: -92% !important;
+}
+
 .comment-icon {
 
 }
@@ -94,7 +98,7 @@
 
 .comment-like-count{
   margin-left: -86%;
-      margin-top: 4px;
-      text-decoration: none;
-      color: rgba(0, 0, 0, 0.7);  
+  margin-top: 4px;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.7);
 }
